feature/sun: render pipeline

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 <body>
 
 	<div class="container">
-		<div class="row">
+		<div id="wrapper" class="row">
+
+			<div class="render" id="renderSolarSystem"></div>
+
 			<div class="accordion" id="accordionSolarSystem"></div>
 		</div>
 	</div>
